# foldfit

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cli.py  config.yaml  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/: LICENSE  README.md
.claude/skills/guidelines/: backend-dev.md  cybersecurity.md  frontend-dev.md
.github/workflows/: ci.yaml
bash/: 01_preprocess.sh  02_msas.sh  03_train.sh  run_all.sh
config/: finetune_config.py
data/: __init__.py  antibody_dataset.py  antibody_fetcher.py  cdr_annotator.py  filters.py
evaluation/: __init__.py  evaluate.py  metrics.py
finetuning/: __init__.py
finetuning/config/: __init__.py  default_antibody.yml
finetuning/lora/: __init__.py  applicator.py  checkpoint.py  layers.py
finetuning/runner/: __init__.py  lora_ema.py
finetuning/tests/: test_antibody_fetcher.py  test_cdr_annotator.py  test_integration_smoke.py  test_lora_applicator.py  test_lora_layers.py  test_lora_runner.py
lora/: config.py
runner/: lora_runner.py
scripts/: compute_msas.py  finetune.py  generate_msa.py  prepare_antibody_data.py  train_lora.py
src/foldfit/: __init__.py  config.py
src/foldfit/api/: app.py  schemas.py
src/foldfit/application/: finetune_service.py  msa_service.py  (+1 more)
tests/: __init__.py  test_antibody_dataset.py  test_lora_checkpoint.py  test_metrics.py
tests/integration/: test_api.py  test_e2e.py
tests/unit/: test_finetune_service.py  test_injector.py  test_lora_linear.py  test_pipeline_mock.py  test_trainer.py  test_value_objects.py
web/: package.json
(+39 files in other folders)
